# scriptorium

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
deploy/: config.example.toml
docker/: sandbox.Dockerfile  service.Dockerfile
docker/sandbox/: 46-emoji-fallback.conf
docs/: architecture.md  architecture.zh-CN.md
proto/: sandbox.proto
src/: config.rs  error.rs  fetch.rs  lib.rs  main.rs  oss.rs  runtime.rs  service.rs  tools.rs  workspace.rs
src/service/: archive.rs  files.rs
tests/: e2e.rs
