[package]
name = "scriptorium"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Sandbox execution middleware — spawns isolated containers on demand for LLM-driven code and RPA workloads"
authors = ["gtoxlili"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/gtoxlili/scriptorium"
homepage = "https://github.com/gtoxlili/scriptorium"
keywords = ["sandbox", "llm", "agent", "grpc", "docker"]
categories = ["command-line-utilities", "virtualization", "network-programming"]

[[bin]]
name = "scriptorium"
path = "src/main.rs"

[lib]
name = "scriptorium"
path = "src/lib.rs"

[dependencies]
# Async runtime — scoped to what we actually use.
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "signal",
    "fs", "io-util", "net", "time", "sync", "process",
] }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"
futures = "0.3"
bytes = "1"

# gRPC. tonic 0.13+ split the prost runtime into a separate crate
# (tonic-prost); the generated code references it at runtime.
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Docker client.
bollard = "0.20"

# Config / serde
serde = { version = "1", features = ["derive"] }
toml = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Errors
thiserror = "2"
anyhow = "1"

# Filesystem paths
path-clean = "1"

# Object storage (S3-compatible — Volcano Engine TOS / AWS S3 / MinIO / R2).
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rt-tokio", "rustls", "behavior-version-latest",
] }
aws-config = { version = "1", default-features = false, features = [
    "rt-tokio", "rustls", "behavior-version-latest",
] }
aws-credential-types = "1"
aws-smithy-types = "1"
aws-smithy-runtime-api = "1"

# URL fetch (FetchIntoWorkspace) + SSRF guard.
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", "stream", "http2",
] }

# Hashing (sha256 checksum of uploaded artifacts).
sha2 = "0.11"
hex = "0.4"

# tar.gz packaging of directory uploads.
tar = "0.4"
flate2 = "1"

# JSON plumbing for the ListTools / CallTool tool layer.
serde_json = "1"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3          # default for release, made explicit
lto = "fat"            # whole-program; slower to link but tighter runtime
codegen-units = 1      # single CGU enables more cross-function optimization
strip = true           # drop debug info from the shipped binary
panic = "abort"        # services don't unwind to recover; abort is smaller + faster

# Lints are applied crate-wide via Cargo's unified lints section.
# Pedantic is opt-in across modules — real-world exceptions are noted inline.
[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Exclusions chosen deliberately — these lints produce noise without uncovering bugs.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# Matching on gRPC error codes reads cleanly as-is.
match_same_arms = "allow"
# Product names (OrbStack, Colima, Playwright, ...) in docs read better
# without backtick fences; `doc_markdown` over-triggers on proper nouns.
doc_markdown = "allow"
# Timestamp arithmetic (u128 nanos → u64, u64 seconds → i64) is deliberate
# — we only need uniqueness or valid-for-centuries epoch values.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# tonic's Status is ~170 bytes; gRPC handlers unavoidably return
# Result<_, Status>.
result_large_err = "allow"
